Fixed z-index problem on player

--- a/src/components/Player/Player.scss
+++ b/src/components/Player/Player.scss
@@ -3,6 +3,7 @@
   bottom: 59px;
   left: 0px;
   transition: all ease .3s;
+  z-index: 5;
 
   .collapseBtn{
     display: grid;
